WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256756
[GTK] The stutters are back
https://bugs.webkit.org/show_bug.cgi?id=256756
Summary
[GTK] The stutters are back
Kdwk
Reported
2023-05-13 05:03:47 PDT
Created
attachment 466343
[details]
Screencast showing scrolling the same website in 2.40 VS 2.41 With WebKitGTK 2.40, the stutters while scrolling heavy websites are largely gone. Even when the website doesn't respond it can still be scrolled smoothly (the scrollbar will usually lag behind the actual scrolling). However, with WebKitGTK 2.41, the stutters are back and the scrolling lags exactly the same as the scrollbar. See attached video for comparison. The URL used is
https://www.reddit.com/r/nottheonion/comments/13fm9jv/loch_ness_monster_hunter_i_thought_this_job_would/
, but the Reddit post must be opened from the main feed in order to reproduce the bug (go to reddit.com/r/nottheonion, the find this post, click to open comments, and scroll down).
Attachments
Screencast showing scrolling the same website in 2.40 VS 2.41
(7.36 MB, video/x-matroska)
2023-05-13 05:03 PDT
,
Kdwk
no flags
Details
Output of webkit://gpu
(8.53 KB, text/plain)
2023-05-17 02:23 PDT
,
Kdwk
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Kdwk
Comment 1
2023-05-13 05:04:57 PDT
I should also mention that both are using the same number of painting threads (4) and the problem still occurs in MiniBrowser
Carlos Garcia Campos
Comment 2
2023-05-16 00:59:07 PDT
Does it happen with WEBKIT_DISABLE_DMABUF_RENDERER=1 too?
Kdwk
Comment 3
2023-05-17 00:50:31 PDT
Can confirm bug does not occur with WEBKIT_DISABLE_DMABUF_RENDERER=1
Carlos Garcia Campos
Comment 4
2023-05-17 02:16:59 PDT
Are you under X11 and GTK4? can you share the output of webkit://gpu?
Kdwk
Comment 5
2023-05-17 02:23:15 PDT
I am using Epiphany Technology Preview (GTK 4) on Gnome/ Wayland.
Kdwk
Comment 6
2023-05-17 02:23:35 PDT
Created
attachment 466380
[details]
Output of webkit://gpu
Carlos Garcia Campos
Comment 7
2023-05-18 04:58:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14012
Carlos Garcia Campos
Comment 8
2023-05-18 04:59:16 PDT
Could you try the patch in the PR, please?
Kdwk
Comment 9
2023-05-18 07:20:49 PDT
I applied the patch and compiled WebKitGTK. From testing in MiniBrowser, I believe the problem fixed now. Scrolling is now even smoother than 2.40
EWS
Comment 10
2023-05-19 00:37:01 PDT
Committed
264237@main
(f8e938785f3c): <
https://commits.webkit.org/264237@main
> Reviewed commits have been landed. Closing PR #14012 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug