[GTK] The stutters are back https://bugs.webkit.org/show_bug.cgi?id=256756

Reviewed by Michael Catanzaro.

Use a explicit FrameDone message instead of using async reply for Frame
message. This allows to make AcceleratedSurfaceDMABuf a message receiver
and use the compositing run loop as receiver queue. This way we avoid
using the main thread to handle frame done notifications.

* Source/WebKit/PlatformGTK.cmake:
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::frame):
(WebKit::AcceleratedBackingStoreDMABuf::frameDone):
(WebKit::AcceleratedBackingStoreDMABuf::update):
(WebKit::AcceleratedBackingStoreDMABuf::snapshot):
(WebKit::AcceleratedBackingStoreDMABuf::paint):
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.h:
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.messages.in:
* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.cpp:
(WebKit::AcceleratedSurfaceDMABuf::didCreateGLContext):
(WebKit::AcceleratedSurfaceDMABuf::willDestroyGLContext):
(WebKit::AcceleratedSurfaceDMABuf::didRenderFrame):
(WebKit::AcceleratedSurfaceDMABuf::frameDone):
* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.h:
* Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.messages.in: Copied from Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.messages.in.

Canonical link: https://commits.webkit.org/264237@main